jQuery Clone/src/objects/Provision__c.object
<CustomObject>
    <fields>
        <fullName>Affected_Party__c</fullName>
        <label>Affected Party</label>
        <picklist>
            <picklistValues>
                <fullName>Employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Child</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spouse and Child</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_category__c</fullName>
        <label>Sub-category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Provision</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>Sub_category__c</columns>
        <columns>Affected_Party__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Provision Tag</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Provisions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>